--- a/myVeloApp/package.json
+++ b/myVeloApp/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-yamap": "^4.1.18"
